--- a/template/base.html
+++ b/template/base.html
@@ -122,7 +122,7 @@
         }
 
         .main-footer {
-            background-color: #f49820;
+            background-color: #1A6F67;
             margin-inline: 0;
         }
 
