--- a/template/store/product_list.html
+++ b/template/store/product_list.html
@@ -8,7 +8,11 @@ Products
         height: 200px;
         object-fit: contain;
         width: 100%;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #a4a4a4;
+    }
+    button:disabled {
+        color: #999!important;
+        border: none!important;
     }
     @media (max-width: 767px){
         .card{
@@ -42,13 +46,18 @@ Products
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text mobile-hidden">{{ product.description }}</p>
                         <p>Quantity : {{ product.category.name }}</p>
-                        <span id="price" class="card-text small text-decoration-line-through text-danger">MRP: ₹{{ product.price }} </span><span class="text-success mx-1 extra small">20% OFF</span>
+                        <p>Availability: {% if product.available %} <span class="text-success" >In Stock </span> {% else %} <span class="text-danger">Out of Stock</span> {% endif %}</p>
+                        <span id="price" class="card-text small text-decoration-line-through text-danger">MRP: ₹{{ product.price }} </span><span class="text-success discount mx-1 extra small">20% OFF</span>
                         <p id="final_price" class="card-text text-primary">Price: ₹{{ product.final_price }}</p>
                         <div style="display: flex;justify-content: space-between;align-items: center;">
                             <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Explore</a>
                             <form method="post" action="{% url 'add_to_cart' product.id %}">
                                 {% csrf_token %}
+                                {% if product.available %} 
                                 <button type="submit" class="btn"><i style="font-size: 2rem;color: #eb676d;" class="fa-solid fa-cart-plus"></i></button>
+                                {% else %} 
+                                <button type="submit" disabled class="btn disabled-btn"><i style="font-size: 2rem;" class="fa-solid fa-cart-plus"></i></button>
+                                {% endif %}
                             </form>
                         </div>
                     </div>
@@ -85,7 +94,7 @@ Products
         productCards.forEach(function (card) {
             const priceElement = card.querySelector('#price');
             const finalPriceElement = card.querySelector('#final_price');
-            const discountContainer = card.querySelector('.text-success');
+            const discountContainer = card.querySelector('.discount');
 
             if (priceElement && finalPriceElement && discountContainer) {
                 const price = priceElement.textContent;
