--- a/template/index.html
+++ b/template/index.html
@@ -40,6 +40,10 @@
             width: 100%;
             object-fit: contain;
         }
+        button:disabled {
+        color: #999!important;
+        border: none!important;
+    }
         @media (max-width: 767px){
             .card-title{
                 font-size: 1rem;
@@ -101,13 +105,19 @@
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text mobile-hidden">{{ product.description }}</p>
                             <p>Quantity : {{ product.category.name }}</p>
+                            <p>Availability: {% if product.available %} <span class="text-success" >In Stock </span> {% else %} <span class="text-danger">Out of Stock</span> {% endif %}</p>
+                    
                             <span id="price" class="card-text small text-decoration-line-through text-danger">MRP: ₹{{ product.price }} </span><span class="text-success mx-1 extra small">20% OFF</span>
-                        <p id="final_price" class="card-text text-primary">Price: ₹{{ product.final_price }}</p>
+                            <p id="final_price" class="card-text text-primary">Price: ₹{{ product.final_price }}</p>
                             <div style="display: flex;justify-content: space-between;align-items: center;">
                                 <a href="{% url 'product_detail' product_id=product.id %}" class="btn btn-ss">Check Out</a>
                                 <form method="post" action="{% url 'add_to_cart' product.id %}">
                                     {% csrf_token %}
-                                    <button type="submit" class="btn"><i style="font-size: 2rem;color: #eb676d;" class="fa-solid fa-cart-plus"></i></button>
+                                    {% if product.available %} 
+                                        <button type="submit" class="btn"><i style="font-size: 2rem;color: #eb676d;" class="fa-solid fa-cart-plus"></i></button>
+                                    {% else %} 
+                                        <button type="submit" disabled class="btn disabled-btn"><i style="font-size: 2rem;" class="fa-solid fa-cart-plus"></i></button>
+                                    {% endif %}
                                 </form>
                             </div>
                         </div>
@@ -130,7 +140,7 @@
     <section class="container mt-4">
         <h2>Special Offers</h2>
         <div class="row">
-            <div class="col-md-6 my-3">
+            <div class="col-md-6">
                 <div class="card">
                     <img src="https://i.ibb.co/ZNJ60gH/IMG-20240110-195241.jpg" class="card-img-bottom" alt="Flash Sale">
                     <div class="card-body">
@@ -140,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 my-3">
+            <div class="col-md-6">
                 <div class="card">
                     <img src="https://i.ibb.co/0Zfn9sj/IMG-20240110-200829.jpg" class="card-img-bottom" alt="New Arrivals">
                     <div class="card-body">
@@ -157,7 +167,7 @@
     <section class="container mt-4">
         <h2>Best Sellers</h2>
         <div class="row">
-            <div class="col-md-6 my-3">
+            <div class="col-md-6">
                 <div class="card">
                     <img src="https://i.ibb.co/sg2M6gB/IMG-20240111-030920.jpg" class="card-img-bottom" alt="Deal of the Day">
                     <div class="card-body">
@@ -167,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 my-3">
+            <div class="col-md-6">
                 <div class="card">
                     <img src="https://i.ibb.co/sg2M6gB/IMG-20240111-030920.jpg" class="card-img-bottom" alt="Top Sellers">
                     <div class="card-body">
@@ -182,7 +192,7 @@
 
     <section class="container mt-4">
         <div class="row">
-            <div class="col-md-4 my-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="https://i.ibb.co/0Zfn9sj/IMG-20240110-200829.jpg" class="card-img-bottom" alt="Customer Reviews">
                     <div class="card-body">
@@ -192,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 my-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="https://i.ibb.co/0Zfn9sj/IMG-20240110-200829.jpg" class="card-img-bottom" alt="Subscribe for Updates">
                     <div class="card-body">
@@ -202,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 my-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="https://i.ibb.co/0Zfn9sj/IMG-20240110-200829.jpg" class="card-img-bottom" alt="Deal of the Day">
                     <div class="card-body">
