--- a/template/base.html
+++ b/template/base.html
@@ -10,8 +10,7 @@
         integrity="sha512-...." crossorigin="anonymous" />
     {% block styles %} {% endblock styles %}
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-        @import url('https://fonts.cdnfonts.com/css/noteworthy');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
 
         html,
         body {
@@ -26,7 +25,7 @@
         h2,
         h3,
         h4 {
-            font-family: 'Noteworthy' !important;
+            font-family: 'Open Sans' !important;
             color: #38a509;
         }
 
